src/test/ui/associated-types/hr-associated-type-bound-param-5.stderr
error[E0277]: the trait bound `for<'b> <std::boxed::Box<T> as X<'b, std::boxed::Box<T>>>::U: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:28:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<std::boxed::Box<T> as X<'b, std::boxed::Box<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error[E0277]: the trait bound `for<'b> <std::vec::Vec<T> as X<'b, std::vec::Vec<T>>>::U: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:28:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<std::vec::Vec<T> as X<'b, std::vec::Vec<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error[E0277]: the trait bound `for<'b> <std::vec::Vec<T> as X<'b, std::vec::Vec<T>>>::U: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:34:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<std::vec::Vec<T> as X<'b, std::vec::Vec<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error[E0277]: the trait bound `for<'b> <std::boxed::Box<T> as X<'b, std::boxed::Box<T>>>::U: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:34:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<std::boxed::Box<T> as X<'b, std::boxed::Box<T>>>::U`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
